// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot 1`] = `
<div
  class="sc-AxjAm eBIMmQ"
>
  <test-file-stub
    image="test-file-stub"
  />
</div>
`;

exports[`matches snapshot with badge 1`] = `
<div
  class="sc-AxjAm ieMbA"
>
  <test-file-stub
    image="test-file-stub"
  />
</div>
`;
